--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -9,6 +9,7 @@
     <meta name="author" content="ChantXu">
     <meta name="keywords" content="少女前线, 后勤, 计算, Girls' Frontline, Logistics Support, Calculator">
     <title>少女前线-后勤组合排序器</title>
+    <!-- css and script -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../vendor/startbootstrap/css/sb-admin-2.min.css" rel="stylesheet">
     <link href="../css/GF_logistics.css" rel="stylesheet">
@@ -34,6 +35,12 @@
     <script src="../js/GF_logistics_MissionTable.js"></script>
     <script src="../js/GF_logistics_PlanDetails.js"></script>
     <script src="../js/GF_logistics_Saved.js"></script>
+
+
+
+
+    
+    <!-- css and script End-->
 </head>
 
 <body>
