--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -319,9 +319,9 @@
                                 </div>
                                 <div id="Saved" class="panel-collapse collapse" aria-expanded="false">
                                     <div class="table-responsive"
-                                        style="max-height: 400px; overflow-y: auto; margin-bottom: 0;">
+                                        style="max-height: 400px; overflow-y: auto; margin-bottom: 0; border: 0;">
                                         <table class="table table-responsive text-nowrap table-condensed"
-                                            style="margin-bottom: 0; text-align: center; cursor: default;">
+                                            style="margin-bottom: 0; text-align: center; cursor: default; border: 0;">
                                             <tbody id="Saved_Body">
                                                 <tr id="importSaved">
                                                     <td colspan=5>
@@ -408,7 +408,7 @@
                         <div class="row">
                             <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12" style="float: right;">
                                 <div class="panel panel-default" style="max-width: 584px;">
-                                    <div class="panel-heading" id="PlanDetailsTitle" style="cursor: default;"></div>
+                                    <div class="panel-heading" id="PlanDetailsTitle" style="cursor: default; border-bottom: 0;"></div>
                                     <div class="panel-body" style="padding: 0;">
                                         <div class="table-responsive" style="margin-bottom: 0; border: 0;">
                                             <table class="table table-responsive text-nowrap table-condensed"
