add English language, optimize other languages

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="">
 
 <head>
     <meta charset="utf-8">
@@ -86,7 +86,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-7">
-                        <h1 class="page-header">
+                        <h1 class="page-header" id="page-header">
                             <span id="header" style="cursor: default;"></span><div 
                             class="btn-group"><button type="button" class="btn btn-default dropdown-toggle"
                                     data-toggle="dropdown">中文 <span class="caret"></span></button>
@@ -95,6 +95,8 @@
                                     <li><a href="#" id="lang-zh-TW">繁體中文</a></li>
                                 </ul>
                             </div>
+                            <button type="button" class="btn btn-default dropdown-toggle"
+                                    data-toggle="dropdown" id="lang-en">English</button>
                         </h1>
                     </div>
                     <div class="col-lg-5">
@@ -313,8 +315,8 @@
                                 <div class="panel-heading">
                                     <div data-toggle="collapse" data-parent="#accordion" href="#Saved" class=""
                                         id="Saved_heading" tabindex="0" aria-expanded="false" style="cursor: pointer;">
-                                        <span class="glyphicon glyphicon-align-justify" style="font-size: 14px;"
-                                            id="Saved_Title"></span>
+                                        <span class="glyphicon glyphicon-align-justify" style="font-size: 14px;"></span>
+                                        <span style="font-size: 14px;" id="Saved_Title"></span>
                                     </div>
                                 </div>
                                 <div id="Saved" class="panel-collapse collapse" aria-expanded="false">
@@ -352,8 +354,8 @@
                                     <div data-toggle="collapse" data-parent="#accordion" href="#MissionTable_panel"
                                         class="" id="MissionTable_heading" tabindex="0" aria-expanded="true"
                                         style="cursor: pointer;">
-                                        <span class="glyphicon glyphicon-align-justify" style="font-size: 14px;"
-                                            id="MissionTableTitle"></span>
+                                        <span class="glyphicon glyphicon-align-justify" style="font-size: 14px;"></span>
+                                        <span style="font-size: 14px;" id="MissionTableTitle"></span>
                                     </div>
                                 </div>
                                 <div id="MissionTable_panel" class="panel-collapse collapse in" aria-expanded="true">
