Easier maintenance logistics,plan table scrollLeft

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -230,15 +230,7 @@
                                         </div>
                                     </div>
                                     <h4 id="h4ChapterLimit" style="cursor: default;"></h4>
-                                    <select class="form-control" id="ChapterLimit" autocomplete="off" style="margin-bottom: 15px;">
-                                        <option value=6 id="chapter6"></option>
-                                        <option value=7 id="chapter7"></option>
-                                        <option value=8 id="chapter8"></option>
-                                        <option value=9 id="chapter9"></option>
-                                        <option value=10 id="chapter10"></option>
-                                        <option value=11 id="chapter11"></option>
-                                        <option value=12 id="chapter12" selected></option>
-                                    </select>
+                                    <select class="form-control" id="ChapterLimit" autocomplete="off" style="margin-bottom: 15px;"></select>
                                     <div class="panel panel-default">
                                         <div class="panel-heading" style="border-bottom-width: 0;">
                                             <h4 class="panel-title"><a data-toggle="collapse" href="#calcTargetValueTool_panel" id="calcTargetValueTool_title" class="collapsed"></a></h4>
