--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -52,7 +52,7 @@
                         <h1 class="page-header" id="page-header" style="margin-top: 30px;">
                             <span id="header" style="cursor: default;"></span><div 
                             class="btn-group"><button type="button" class="btn btn-default dropdown-toggle"
-                                    data-toggle="dropdown">中文 <span class="caret"></span></button>
+                                    data-toggle="dropdown">中文 &#9660</button>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#" id="lang-zh-CN">简体中文</a></li>
                                     <li><a href="#" id="lang-zh-TW">繁體中文</a></li>
@@ -305,14 +305,13 @@
                                                                     <div class="input-group-btn">
                                                                         <button class="btn btn-danger" type="button" id="calcTargetValueTool_clear" style="height: 28px;padding:3px 20px 3px 20px;font-size:13px; border-width: 0 1px 0 1px;"></button>
                                                                         <button class="btn btn-primary" type="button" id="calcTargetValueTool_startCalc" style="height: 28px;padding:3px 20px 3px 20px;font-size:13px; border-width: 0 1px 0 1px;"></button>
-                                                                        <button class="btn btn-success" type="button" id="calcTargetValueTool_apply" style="height: 28px;padding:3px 20px 3px 20px;font-size:13px; border-width: 0 1px 0 1px;">
-                                                                        <span id="calcTargetValueTool_apply_text"></span>
-                                                                        <span id="calcTargetValueTool_apply_icon"> &rarr;</span>
+                                                                        <button class="btn btn-success" type="button" id="calcTargetValueTool_apply" style="height: 28px;padding:0 20px 0 20px;font-size:13px; border-width: 0 1px 0 1px; line-height: 28px;">
+                                                                            <span id="calcTargetValueTool_apply_text"></span> &rarr;
                                                                         </button>
                                                                     </div>
                                                                 </td>
                                                             </tr>
-                                                            <tr">
+                                                            <tr>
                                                                 <td id="calcTargetValueTool_Result_Manp_text" style="width: 90px; border-top-width: 4px;"></td>
                                                                 <td id="calcTargetValueTool_Result_Ammu_text" style="width: 90px; border-top-width: 4px;"></td>
                                                                 <td id="calcTargetValueTool_Result_Rati_text" style="width: 90px; border-top-width: 4px;"></td>
@@ -553,14 +552,13 @@
                 </div>
                 <hr style="margin-top: 0; margin-bottom: 0;">
                 <div class="row" style="padding-top: 5px; padding-bottom: 10px;">
-                    <div class="col-lg-3" style="margin-right: 15px;">
-                        <span style="cursor: default;">GitHub: </span><a 
-                        href="https://github.com/CHANTXU64/Girls-Frontline">https://github.com/CHANTXU64/Girls-Frontline</a>
-                    </div>
-                    <div class="col-lg-3">
-                        <span id="permanentAddress" style="cursor: default;"></span><a
+                    <footer class="col-lg-3" style="margin-right: 15px; cursor: default;">
+                        GitHub: <a href="https://github.com/CHANTXU64/Girls-Frontline">https://github.com/CHANTXU64/Girls-Frontline</a>
+                    </footer>
+                    <footer class="col-lg-3">
+                        <span id="permanentAddress"></span><a
                             href="https://chantxu64.github.io/GF_logistics.html">https://chantxu64.github.io/GF_logistics.html</a>
-                    </div>
+                    </footer>
                 </div>
             </div>
         </div>
