--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Girls' Frontline logistics calculator">
     <meta name="author" content="ChantXu">
     <meta name="keywords" content="少女前线, 后勤, 计算, Girls' Frontline, Logistics Support, Calculator">
-    <title>少女前线-后勤组合排序器</title>
+    <title>Girls' Frontline Logistics Combination Calculator</title>
     <!-- css and script -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/GF_logistics.css" rel="stylesheet">
@@ -45,7 +45,7 @@
 
 <body>
     <div id="wrapper" style="background-color: rgb(245, 245, 245);">
-        <div id="page-wrapper" style="min-width: 300px; padding: 0 15px 0 15px; margin-left: 250px; background-color: #FFFFFF;">
+        <div id="page-wrapper" style="min-width: 300px; padding: 0 15px 0 15px; background-color: #FFFFFF;">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-7">
