--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -18,28 +18,28 @@
     <script src="../vendor/html2canvas/html2canvas.min.js"></script>
     <script src="../vendor/js-sha1/sha1.min.js"></script>
     <script src="../vendor/js-md5/md5.min.js"></script>
-    <script src="../js/GF_logistics_function.js"></script>
-    <script src="../js/GF_logistics_input.js"></script>
-    <script src="../js/Quick_Sort.js"></script>
+    <script src="../vendor/lz-string/lz-string.min.js"></script>
     <script src="../lang/languages.js"></script>
-    <script src="../js/GF_logistics_localStorage.js"></script>
-    <script src="../js/GF_logistics_loadHTML.js"></script>
-    <script src="../js/GF_logistics_html.js"></script>
-    <script src="../js/GF_logistics_htmlEvent.js"></script>
+    <script src="../js/Quick_Sort.js"></script>
+    <script src="../js/GF_logistics_function.js"></script>
     <script src="../js/GF_logistics_data.js"></script>
+    <script src="../js/GF_logistics_localStorage.js"></script>
+    <script src="../js/GF_logistics_TimetableSlider.js"></script>
+    <script src="../js/GF_logistics_input.js"></script>
     <script src="../js/GF_logistics_Tab.js"></script>
-    <script src="../js/GF_logistics_Plan.js"></script>
-    <script src="../js/GF_logistics_main.js"></script>
+    <script src="../js/GF_logistics_loadHTML.js"></script>
+    <script src="../js/GF_logistics_PlanDetails.js"></script>
+    <script src="../js/GF_logistics_ResultsPlan.js"></script>
     <script src="../js/GF_logistics_FineTuning.js"></script>
     <script src="../js/GF_logistics_MissionTable.js"></script>
-    <script src="../js/GF_logistics_PlanDetails.js"></script>
+    <script src="../js/GF_logistics_ResultAndDetailsEvent.js"></script>
+    <script src="../js/GF_logistics_html.js"></script>
+    <script src="../js/GF_logistics_Plan.js"></script>
+    <script src="../js/GF_logistics_main.js"></script>
     <script src="../js/GF_logistics_Saved.js"></script>
     <script src="../js/GF_logistics_calcTargetValueTool.js"></script>
-
-
-
-
-
+    <script src="../js/GF_logistics_config.js"></script>
+    <script src="../js/GF_logistics_htmlEvent.js"></script>
     <!-- css and script End-->
 </head>
 
@@ -119,7 +119,7 @@
                                         </li>
                                     </ul>
                                     <div class="tab-content">
-                                        <div class="tab-pane fade in active" id="Tab_Anytime">
+                                        <div class="tab-pane fade active in" id="Tab_Anytime">
                                             <h4 id="tab_Anytime_time" style="cursor: default;"></h4>
                                             <div class="form-group input-group">
                                                 <input type="number" min="0" max="72"
@@ -231,7 +231,7 @@
                                     </div>
                                     <h4 id="h4ChapterLimit" style="cursor: default;"></h4>
                                     <select class="form-control" id="ChapterLimit" autocomplete="off" style="margin-bottom: 15px;"></select>
-                                    <div class="panel panel-default">
+                                    <div class="panel panel-default" style="max-width: 722px;">
                                         <div class="panel-heading" style="border-bottom-width: 0;">
                                             <h4 class="panel-title"><a data-toggle="collapse" href="#calcTargetValueTool_panel" id="calcTargetValueTool_title" class="collapsed"></a></h4>
                                         </div>
@@ -296,12 +296,12 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
-                                                                <td colspan="2" style="padding: 0; margin-top: 0; border-top: 0;">
+                                                                <td colspan="2" style="padding: 0; margin-top: 0; border-top-width: 3px;">
                                                                     <div class="form-group input-group" style="margin-bottom: 0;">
                                                                         <label for="calcTargetValueTool_InputExecutionTimes" id="calcTargetValueTool_InputExecutionTimes_label" class="input-group-addon" style="font-size: 13px; border-radius: 0; border: 0;"></label>
                                                                         <input type="number" min="1" max="999" step="1" id="calcTargetValueTool_InputExecutionTimes" class="form-control" onfocus="this.select();" value="1" style="height: 28px;padding:3px 6px 3px 6px; border-radius: 0; border-width: 0 0 0 1px;" autocomplete="off">
                                                                 </td>
-                                                                <td colspan="6" style="padding: 0; margin-top: 0; border-top: 0;" align="left">
+                                                                <td colspan="6" style="padding: 0; margin-top: 0; border-top-width: 3px;" align="left">
                                                                     <div class="input-group-btn">
                                                                         <button class="btn btn-danger" type="button" id="calcTargetValueTool_clear" style="height: 28px;padding:3px 20px 3px 20px;font-size:13px; border-width: 0 1px 0 1px;"></button>
                                                                         <button class="btn btn-primary" type="button" id="calcTargetValueTool_startCalc" style="height: 28px;padding:3px 20px 3px 20px;font-size:13px; border-width: 0 1px 0 1px;"></button>
@@ -312,14 +312,14 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
-                                                                <td id="calcTargetValueTool_Result_Manp_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_Ammu_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_Rati_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_Part_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_TPro_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_Equi_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_QPro_text" style="width: 90px; border-top-width: 4px;"></td>
-                                                                <td id="calcTargetValueTool_Result_QRes_text" style="width: 90px; border-top-width: 4px;"></td>
+                                                                <td id="calcTargetValueTool_Result_Manp_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_Ammu_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_Rati_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_Part_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_TPro_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_Equi_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_QPro_text" style="width: 90px;"></td>
+                                                                <td id="calcTargetValueTool_Result_QRes_text" style="width: 90px;"></td>
                                                             </tr>
                                                             <tr>
                                                                 <td id="calcTargetValueTool_Result_Manp_value" style="width: 90px;"></td>
@@ -363,9 +363,9 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <button type="button" class="btn btn-primary" style="outline:none;"
-                                        id="start_sorting"></button>
+                                        id="start_ranking"></button>
                                     <button type="button" class="btn btn-danger" style="outline: none; display: none;"
-                                        id="clear_sorting" disabled="disabled"></button>
+                                        id="clear_ranking" disabled="disabled"></button>
                                 </div>
                             </div>
                         </div>
@@ -385,7 +385,7 @@
                                         style="max-height: 400px; overflow-y: auto; margin-bottom: 0; border: 0;">
                                         <table class="table table-responsive text-nowrap table-condensed"
                                             style="margin-bottom: 0; text-align: center; cursor: default; border: 0;">
-                                            <tbody id="Saved_Body">
+                                            <tbody>
                                                 <tr id="importSaved">
                                                     <td colspan=5>
                                                         <div class="form-group input-group"
@@ -406,6 +406,8 @@
                                                     <td id="NoSaved" colspan=5></td>
                                                 </tr>
                                             </tbody>
+                                            <tbody id="Saved_Body" style="border-top-width: 1px;">
+                                            </tbody>
                                         </table>
                                     </div>
                                 </div>
@@ -424,38 +426,38 @@
                                         <div class="table-responsive"
                                             style="max-height: 540px; overflow-y: auto; margin-bottom: 0; border: 0;">
                                             <table class="table table-responsive text-nowrap table-condensed"
-                                                style="border: 0;text-align: center; margin-bottom: 0;">
+                                                style="border: 0;text-align: center; margin-bottom: 0; cursor: default;">
                                                 <thead>
-                                                    <tr>
+                                                    <tr style="cursor: pointer;">
                                                         <th id="MissionTable_head_Mission" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_Manp" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_Ammu" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_Rati" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_Part" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_TPro" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_Equi" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_QPro" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_QRes" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                         <th id="MissionTable_head_Time" tabindex="0"
-                                                            style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;">
+                                                            style="width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2);">
                                                         </th>
                                                     </tr>
                                                 </thead>
@@ -498,10 +500,10 @@
                                                         <td id="PlanDetails_QRes" style="width: 61px;"></td>
                                                         <td id="PlanDetails_Time" style="width: 61px;"></td>
                                                     </tr>
-                                                    <tr id="PlanDetails_Mission_1"></tr>
-                                                    <tr id="PlanDetails_Mission_2"></tr>
-                                                    <tr id="PlanDetails_Mission_3"></tr>
-                                                    <tr id="PlanDetails_Mission_4"></tr>
+                                                    <tr id="PlanDetails_Mission_1" style="background-color: #C5D8FF;"></tr>
+                                                    <tr id="PlanDetails_Mission_2" style="background-color: #FFBFBE;"></tr>
+                                                    <tr id="PlanDetails_Mission_3" style="background-color: #B6F4B5;"></tr>
+                                                    <tr id="PlanDetails_Mission_4" style="background-color: #FFEBC7;"></tr>
                                                     <tr id="PlanDetails_PerHour"></tr>
                                                     <tr id="PlanDetails_Total"></tr>
                                                     <tr id="PlanDetails_Chart_row">
@@ -539,10 +541,11 @@
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12" style="float: left;">
-                                <div class="panel panel-default">
-                                    <div class="panel-heading" id="result" style="cursor: default;"></div>
+                                <div class="panel panel-default" style="cursor: default;">
+                                    <div class="panel-heading" id="result"></div>
                                     <div class="panel-body">
-                                        <div id="start_sorting_html" style="cursor: default;"></div>
+                                        <div id="start_ranking_html"></div>
+                                        <div id="FineTuning"></div>
                                         <div id="Plan_Table"></div>
                                     </div>
                                 </div>
