fix bug - clear_ranking disabled

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -365,7 +365,7 @@
                                     <button type="button" class="btn btn-primary" style="outline:none;"
                                         id="start_ranking"></button>
                                     <button type="button" class="btn btn-danger" style="outline: none; display: none;"
-                                        id="clear_ranking" disabled="disabled"></button>
+                                        id="clear_ranking"></button>
                                 </div>
                             </div>
                         </div>
