--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -67,7 +67,7 @@
                             style="max-width: 400px; margin-top: 20px; margin-right: 0; margin-left: auto;">
                             <span class="input-group-addon" id="Config_text" style="cursor: default;"></span>
                             <input type="text" class="form-control" style="min-width: 40px;" id="Config_importInput"
-                                value="" onfocus="this.select();" autocomplete="off">
+                                value="" onclick="this.select();" autocomplete="off">
                             <div class="input-group-btn">
                                 <button type="button" class="btn btn-default" id="Config_importButton">
                                     <span class="glyphicon glyphicon-import" style="top: 2px;"></span></button>
@@ -392,7 +392,7 @@
                                                             style="margin-bottom: 0; width:100%; max-width: 320px;">
                                                             <input type="text" class="form-control"
                                                                 style="min-width: 140px;" id="importSaved_input"
-                                                                value="" onfocus="this.select();" autocomplete="off">
+                                                                value="" onclick="this.select();" autocomplete="off">
                                                             <div class="input-group-btn">
                                                                 <button type="button" class="btn btn-default"
                                                                     id="importSaved_importButton" title="">
