fix bug, debug tool

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -19,6 +19,7 @@
     <script src="../vendor/js-sha1/sha1.min.js"></script>
     <script src="../vendor/js-md5/md5.min.js"></script>
     <script src="../vendor/lz-string/lz-string.min.js"></script>
+    <script src="../js/GF_logistics_debug.js" crossorigin></script>
     <script src="../lang/languages.js"></script>
     <script src="../js/Quick_Sort.js"></script>
     <script src="../js/GF_logistics_function.js"></script>
@@ -554,14 +555,15 @@
                     </div>
                 </div>
                 <hr style="margin-top: 0; margin-bottom: 0;">
-                <div class="row" style="padding-top: 5px; padding-bottom: 10px;">
-                    <footer class="col-lg-3" style="margin-right: 15px; cursor: default;">
+                <div class="row" style="padding-top: 5px; padding-bottom: 10px; cursor: default;">
+                    <footer class="col-lg-3" style="margin-right: 15px;">
                         GitHub: <a href="https://github.com/CHANTXU64/Girls-Frontline">https://github.com/CHANTXU64/Girls-Frontline</a>
                     </footer>
                     <footer class="col-lg-3">
                         <span id="permanentAddress"></span><a
                             href="https://chantxu64.github.io/GF_logistics.html">https://chantxu64.github.io/GF_logistics.html</a>
                     </footer>
+                    <span style="float: right; cursor: pointer; color: rgb(233, 245, 255); padding: 0 15px 0 15px;" onclick="$('#Config_importInput').val(CONSOLE);">debug</span>
                 </div>
             </div>
         </div>
