--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -510,7 +510,7 @@
                         <span id="permanentAddress"></span><a
                             href="https://chantxu64.github.io/GF_logistics.html">https://chantxu64.github.io/GF_logistics.html</a>
                     </footer>
-                    <span style="float: right; cursor: pointer; color: rgb(233, 245, 255); padding: 0;" onclick="$('#Config_importInput').val(CONSOLE);">debug</span>
+                    <span style="float: right; cursor: pointer; color: rgb(233, 245, 255); padding: 0;" id="debug">debug</span>
                 </div>
             </div>
         </div>
