--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -16,6 +16,7 @@
     <script src="../vendor/jquery-v2.1.1/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../vendor/echarts/echarts.min.js"></script>
+    <script src="../vendor/es6-promise/es6_promise.auto.min.js"></script>
     <script src="../vendor/html2canvas/html2canvas.min.js"></script>
     <script src="../vendor/js-sha1/sha1.min.js"></script>
     <script src="../vendor/js-md5/md5.min.js"></script>
