offline footer, readme

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -506,11 +506,14 @@
                 <div class="col-lg-12" style="padding: 0 15px 10px 15px; cursor: default;">
                     <hr style="margin: 0 0 5px 0;"/>
                     <footer class="col-lg-3" style="padding: 0;">
-                        GitHub: <a href="https://github.com/CHANTXU64/Girls-Frontline">https://github.com/CHANTXU64/Girls-Frontline</a>
+                        GitHub: <a href="https://github.com/CHANTXU64/Girls-Frontline" target="_blank">https://github.com/CHANTXU64/Girls-Frontline</a>
                     </footer>
                     <footer class="col-lg-3" style="padding: 0;">
                         <span id="permanentAddress"></span><a
-                            href="https://chantxu64.github.io/GF_logistics.html">https://chantxu64.github.io/GF_logistics.html</a>
+                            href="https://chantxu64.github.io/GF_logistics.html" target="_blank">https://chantxu64.github.io/GF_logistics.html</a>
+                    </footer>
+                    <footer class="col-lg-3" style="padding: 0;">
+                        <a id="OfflineVersion" href="" target="_blank"></a>
                     </footer>
                     <span style="float: right; cursor: pointer; color: rgb(233, 245, 255); padding: 0;" id="debug">debug</span>
                 </div>
