compress offline version, v1.0.2

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -513,7 +513,7 @@
                             href="https://chantxu64.github.io/GF_logistics.html" target="_blank">https://chantxu64.github.io/GF_logistics.html</a>
                     </footer>
                     <footer class="col-lg-3" style="padding: 0;">
-                        <a id="OfflineVersion" href="" target="_blank"></a>
+                        <a id="OfflineVersion" href="https://github.com/CHANTXU64/Girls-Frontline/releases/download/v1.0.2/GF_logistics_offline_v1_0_2.zip" target="_blank"></a>
                     </footer>
                     <span style="float: right; cursor: pointer; color: rgb(233, 245, 255); padding: 0;" id="debug">debug</span>
                 </div>
