change "debug" footer, auto select exported data

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -72,7 +72,7 @@
                             <div class="input-group-btn">
                                 <button type="button" class="btn btn-default" id="Config_importButton">
                                     <span class="glyphicon glyphicon-import" style="top: 2px;"></span></button>
-                                <div class="btn-group">
+                                <div id="Config_export_group" class="btn-group">
                                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="Config_export"><span
                                         class="glyphicon glyphicon-export" style="top: 2px;"></span></button>
                                     <ul class="dropdown-menu" role="menu" style="width: 280px; left: -239px;">
@@ -519,7 +519,6 @@
                     <footer class="col-lg-3" style="padding: 0;">
                         <a id="OfflineVersion" href="https://chantxu64.github.io/GF_logistics_offline.zip" download="GF_logistics_offline.zip" target="_blank;"></a>
                     </footer>
-                    <span style="float: right; cursor: pointer; color: rgb(233, 245, 255); padding: 0;" id="debug">debug</span>
                 </div>
             </div>
         </div>
