--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -50,6 +50,25 @@
       transition: none;
     }
   </style>
+  <!-- Modal -->
+  <div class="modal fade" id="Modal" data-backdrop="static" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title disable-selected-text" id="Modal_title"></h5>
+          <button type="button" id="Modal_closeButton" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="Modal_body"></div>
+        <div class="modal-footer" id="Modal_footer">
+          <button type="button" class="btn btn-primary" id="Modal_footer_button_ok" data-dismiss="modal" style="width: 5rem;"></button>
+          <button type="button" class="btn btn-outline-dark" id="Modal_footer_button_cancel" data-dismiss="modal" style="width: 5rem;"></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- end Modal -->
   <h1 id="page-header" class="col-lg-7 float-left disable-selected-text mb-0 mt-4">
     <div class="spinner-grow text-success align-middle" role="status" style="height: 0.5rem; width: 0.5rem;">
       <span class="sr-only">Loading...</span>
@@ -535,6 +554,7 @@
   <script src="../js/Quick_Sort.js"></script>
   <script src="../js/GF_logistics_function.js"></script>
   <script src="../js/GF_logistics_data.js"></script>
+  <script src="../js/GF_logistics_Modal.js"></script>
   <script src="../js/GF_logistics_localStorage.js"></script>
   <script src="../js/GF_logistics_TimetableSlider.js"></script>
   <script src="../js/GF_logistics_input.js"></script>
