show version on the page

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -532,10 +532,11 @@
       <span id="permanentAddress"></span><a href="https://chantxu64.github.io/GF_logistics.html"
         target="_blank">https://chantxu64.github.io/GF_logistics.html</a>
     </footer>
-    <footer class="col-lg-4 p-0">
+    <footer class="col p-0">
       <a id="OfflineVersion" href="https://chantxu64.github.io/GF_logistics_offline.zip"
         download="GF_logistics_offline.zip" target="_blank;"></a>
     </footer>
+    <footer class="col p-0" id="version"></footer>
   </div>
 
   <script>
