--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -311,7 +311,7 @@
                       <td id="calcTargetValueTool_Result_QRes_value" style="cursor: auto"></td>
                     </tr>
                     <tr>
-                      <td colspan="3" class="p-0 mt-0">
+                      <td colspan="7" class="p-0 mt-0">
                         <div class="input-group">
                           <label for="calcTargetValueTool_InputExecutionTimes"
                             id="calcTargetValueTool_InputExecutionTimes_label"
@@ -319,20 +319,18 @@
                             style="font-size: 0.82rem; border-radius: 0; border-width: 0 1px 0 0;"></label>
                           <input type="number" min="1" max="999" step="1" id="calcTargetValueTool_InputExecutionTimes"
                             class="form-control" onfocus="this.select();" value="1"
-                            style="height: 30px;padding:3px 6px; border-radius: 0; border-width: 0 1px;"
+                            style="padding:3px 6px; border-radius: 0; border-width: 0 1px;"
                             autocomplete="off">
-                        </div>
-                      </td>
-                      <td colspan="6" class="p-0 mt-0 float-left">
-                        <button class="btn btn-danger" type="button" id="calcTargetValueTool_clear" disabled
-                          style="height: 30px;padding:3px 20px;font-size:13px; border-width: 0 1px;"></button>
-                        <button class="btn btn-primary" type="button" id="calcTargetValueTool_startCalc" disabled
-                          style="height: 30px;padding:3px 20px;font-size:13px; border-width: 0 1px;"></button>
-                        <button class="btn btn-success" type="button" id="calcTargetValueTool_apply" disabled
-                          style="height: 30px;padding:0 20px;font-size:13px; border-width: 0 1px; line-height: 30px;">
-                          <span id="calcTargetValueTool_apply_text"></span>
-                          &rarr;
-                        </button>
+                          <button class="btn btn-danger" type="button" id="calcTargetValueTool_clear" disabled
+                            style="border-radius: 0; padding:3px 20px;font-size:13px; border-width: 0 1px;"></button>
+                          <button class="btn btn-primary" type="button" id="calcTargetValueTool_startCalc" disabled
+                            style="border-radius: 0; padding:3px 20px;font-size:13px; border-width: 0 1px;"></button>
+                          <button class="btn btn-success" type="button" id="calcTargetValueTool_apply" disabled
+                            style="border-radius: 0; padding:0 20px;font-size:13px; border-width: 0 1px; line-height: 30px;">
+                            <span id="calcTargetValueTool_apply_text"></span>
+                            &rarr;
+                          </button>
+                        </td>
                       </td>
                     </tr>
                   </tbody>
