fix jumping scrollbar issue

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -45,6 +45,29 @@
     window.bootstrap || document.write('<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"><link href="../css/GF_logistics_slider.css" rel="stylesheet"><link href="../css/GF_logistics_button.css" rel="stylesheet"><link href="../css/GF_logistics_group.css" rel="stylesheet"><link href="../css/GF_logistics.css" rel="stylesheet"><script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"><\/script>');
     //end backup vendor bootstrap !python
   </script>
+  <style>
+    html {
+      overflow-y: scroll;
+    }
+
+    :root {
+      overflow-y: auto;
+      overflow-x: hidden;
+    }
+
+    :root body {
+      position: absolute;
+    }
+
+    body {
+      width: 100vw;
+      overflow: hidden;
+    }
+
+    .container-fluid {
+      width: 100vw;
+    }
+  </style>
 </head>
 
 <body class="container-fluid" id="container-fluid">
