--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -425,7 +425,7 @@
             </div>
           </div>
           <div id="NoSaved" style="text-align: center;"></div>
-          <ul id="Saved_Body" class="list-group list-group-regular" style="max-height: 287px; overflow-y: auto;"></ul>
+          <ul id="Saved_Body" class="list-group list-group-regular Saved-List" style="max-height: 287px; overflow-y: auto;"></ul>
         </div>
       </div>
       <div class="card border-dark mb-3">
